--- a/immo_site/static/immo_site.css
+++ b/immo_site/static/immo_site.css
@@ -44,6 +44,9 @@ a.anchor{
 
 p {
   text-align: justify;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
 }
 /* misc */
 
@@ -82,6 +85,7 @@ p {
   color: red;  
   background-color: white;
   right: 0;
+  bottom: 0;
   font-size: 2.5vw;
     -webkit-animation-name: example; /* Chrome, Safari, Opera */
     -webkit-animation-duration: 4s; /* Chrome, Safari, Opera */
@@ -137,6 +141,10 @@ p {
 
 #hide {
   color: white;
+}
+
+.invis {
+  display: none;
 }
 
 .mcol {
